Refactor All logic